kustomize/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcp-cicd
spec:
  selector:
    matchLabels:
      app: gcp-cicd
  template:
    metadata:
      labels:
        app: gcp-cicd
    spec:
      containers:
        - name: gcp-cicd
          image: us-east1-docker.pkg.dev/graphic-matrix-481507-u5/gcp-cicd/gcp-cicd:#{IMAGE_TAG}#
          imagePullPolicy: Always
